@@ -1,3 +1,7 @@
+2000-03-26  Bernd Schmidt <bernds@cygnus.co.uk>
+
+	* config/arm/arm.c: Disable -fschedule-insns for Thumb.
+
 2000-03-24  Nick Clifton  <nickc@cygnus.com>
 
 	Various formating tidyups, elimination of compile time
